# Silly_little_media_player

./: CMakeLists.txt  Main.cpp  README.md  gui_main.cpp  main_window.cpp  main_window.h  player_client.cpp  player_client.h  player_ctl.cpp  protocol.h  shell.nix
Geniusnt/: Geniusnt-ctl
